--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -14,7 +14,8 @@ path = "src/main.rs"
 [dependencies]
 muxux-core = { path = "../core" }
 cmx-utils = { path = "../../cmx-utils" }
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["tray-icon"] }
+tauri-plugin-global-shortcut = "2"
 tauri-build = { version = "2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
