--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -14,12 +14,15 @@ path = "src/main.rs"
 [dependencies]
 muxux-core = { path = "../core" }
 cmx-utils = { path = "../../cmx-utils" }
-tauri = { version = "2", features = ["tray-icon"] }
+tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
 tauri-plugin-global-shortcut = "2"
 tauri-build = { version = "2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
+
+[features]
+e2e = []
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
