--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -20,6 +20,7 @@ tauri-build = { version = "2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
+dirs = "5"
 
 [features]
 e2e = []
